--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "configurator-cli",
+  "name": "configurator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "configurator": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
+  "exports": "./index.js",
   "keywords": [],
   "author": "Max Witt",
   "license": "UNLICENSED",
